// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`12 Column Options it should render a 5 span, 3 span column grid 1`] = `
.emotion-5 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-5 *,
.emotion-5 *::after,
.emotion-5 *::before {
  box-sizing: border-box;
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: auto;
  margin-left: auto;
  min-width: 0;
}

.emotion-2 {
  width: 25%;
}

.emotion-0 {
  width: 41.66666666666667%;
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
    display="flex"
  >
    <div
      className="emotion-0 emotion-1"
      width="41.66666666666667%"
    />
    <div
      className="emotion-2 emotion-1"
      width="25%"
    />
  </div>
</div>
`;

exports[`12 Column Options it should render a 5 span, 5 span, 2 span column grid 1`] = `
.emotion-7 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-7 *,
.emotion-7 *::after,
.emotion-7 *::before {
  box-sizing: border-box;
}

.emotion-6 {
  box-sizing: border-box;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: auto;
  margin-left: auto;
  min-width: 0;
}

.emotion-4 {
  width: 16.666666666666664%;
}

.emotion-0 {
  width: 41.66666666666667%;
}

<div
  className="emotion-7"
>
  <div
    className="emotion-6"
    display="flex"
  >
    <div
      className="emotion-0 emotion-1"
      width="41.66666666666667%"
    />
    <div
      className="emotion-0 emotion-1"
      width="41.66666666666667%"
    />
    <div
      className="emotion-4 emotion-1"
      width="16.666666666666664%"
    />
  </div>
</div>
`;

exports[`12 Column Options it should render a 6 span, 6 span column grid 1`] = `
.emotion-5 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-5 *,
.emotion-5 *::after,
.emotion-5 *::before {
  box-sizing: border-box;
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: auto;
  margin-left: auto;
  min-width: 0;
}

.emotion-0 {
  width: 50%;
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
    display="flex"
  >
    <div
      className="emotion-0 emotion-1"
      width="50%"
    />
    <div
      className="emotion-0 emotion-1"
      width="50%"
    />
  </div>
</div>
`;

exports[`12 Column Options it should render a 8 span, 4 span column grid 1`] = `
.emotion-5 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-5 *,
.emotion-5 *::after,
.emotion-5 *::before {
  box-sizing: border-box;
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: auto;
  margin-left: auto;
  min-width: 0;
}

.emotion-0 {
  width: 66.66666666666666%;
}

.emotion-2 {
  width: 33.33333333333333%;
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
    display="flex"
  >
    <div
      className="emotion-0 emotion-1"
      width="66.66666666666666%"
    />
    <div
      className="emotion-2 emotion-1"
      width="33.33333333333333%"
    />
  </div>
</div>
`;

exports[`12 Column Options it should render a 9 span, 3 span column grid 1`] = `
.emotion-5 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-5 *,
.emotion-5 *::after,
.emotion-5 *::before {
  box-sizing: border-box;
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: auto;
  margin-left: auto;
  min-width: 0;
}

.emotion-2 {
  width: 25%;
}

.emotion-0 {
  width: 75%;
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
    display="flex"
  >
    <div
      className="emotion-0 emotion-1"
      width="75%"
    />
    <div
      className="emotion-2 emotion-1"
      width="25%"
    />
  </div>
</div>
`;

exports[`12 Column Options it should render a 10 span, 2 span column grid 1`] = `
.emotion-5 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-5 *,
.emotion-5 *::after,
.emotion-5 *::before {
  box-sizing: border-box;
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: auto;
  margin-left: auto;
  min-width: 0;
}

.emotion-2 {
  width: 16.666666666666664%;
}

.emotion-0 {
  width: 83.33333333333334%;
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
    display="flex"
  >
    <div
      className="emotion-0 emotion-1"
      width="83.33333333333334%"
    />
    <div
      className="emotion-2 emotion-1"
      width="16.666666666666664%"
    />
  </div>
</div>
`;

exports[`12 Column Options it should render a 11 span, 1 span column grid 1`] = `
.emotion-5 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-5 *,
.emotion-5 *::after,
.emotion-5 *::before {
  box-sizing: border-box;
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: auto;
  margin-left: auto;
  min-width: 0;
}

.emotion-2 {
  width: 8.333333333333332%;
}

.emotion-0 {
  width: 91.66666666666666%;
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
    display="flex"
  >
    <div
      className="emotion-0 emotion-1"
      width="91.66666666666666%"
    />
    <div
      className="emotion-2 emotion-1"
      width="8.333333333333332%"
    />
  </div>
</div>
`;

exports[`12 Column Options it should render a 11 span, 2 span column grid 1`] = `
.emotion-5 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-5 *,
.emotion-5 *::after,
.emotion-5 *::before {
  box-sizing: border-box;
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: auto;
  margin-left: auto;
  min-width: 0;
}

.emotion-2 {
  width: 16.666666666666664%;
}

.emotion-0 {
  width: 91.66666666666666%;
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
    display="flex"
  >
    <div
      className="emotion-0 emotion-1"
      width="91.66666666666666%"
    />
    <div
      className="emotion-2 emotion-1"
      width="16.666666666666664%"
    />
  </div>
</div>
`;

exports[`12 Column Options it should render a grid with 1 column 1`] = `
.emotion-3 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-3 *,
.emotion-3 *::after,
.emotion-3 *::before {
  box-sizing: border-box;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: auto;
  margin-left: auto;
  min-width: 0;
}

.emotion-0 {
  width: 100%;
}

<div
  className="emotion-3"
>
  <div
    className="emotion-2"
    display="flex"
  >
    <div
      className="emotion-0 emotion-1"
      width="100%"
    />
  </div>
</div>
`;

exports[`12 Column Options it should render a grid with 2 columns 1`] = `
.emotion-5 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-5 *,
.emotion-5 *::after,
.emotion-5 *::before {
  box-sizing: border-box;
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: auto;
  margin-left: auto;
  min-width: 0;
}

.emotion-0 {
  width: 50%;
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
    display="flex"
  >
    <div
      className="emotion-0 emotion-1"
      width="50%"
    />
    <div
      className="emotion-0 emotion-1"
      width="50%"
    />
  </div>
</div>
`;

exports[`12 Column Options it should render a grid with 3 columns 1`] = `
.emotion-7 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-7 *,
.emotion-7 *::after,
.emotion-7 *::before {
  box-sizing: border-box;
}

.emotion-6 {
  box-sizing: border-box;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: auto;
  margin-left: auto;
  min-width: 0;
}

.emotion-0 {
  width: 33.33333333333333%;
}

<div
  className="emotion-7"
>
  <div
    className="emotion-6"
    display="flex"
  >
    <div
      className="emotion-0 emotion-1"
      width="33.33333333333333%"
    />
    <div
      className="emotion-0 emotion-1"
      width="33.33333333333333%"
    />
    <div
      className="emotion-0 emotion-1"
      width="33.33333333333333%"
    />
  </div>
</div>
`;

exports[`12 Column Options it should render a grid with 4 columns 1`] = `
.emotion-9 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-9 *,
.emotion-9 *::after,
.emotion-9 *::before {
  box-sizing: border-box;
}

.emotion-8 {
  box-sizing: border-box;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: auto;
  margin-left: auto;
  min-width: 0;
}

.emotion-0 {
  width: 25%;
}

<div
  className="emotion-9"
>
  <div
    className="emotion-8"
    display="flex"
  >
    <div
      className="emotion-0 emotion-1"
      width="25%"
    />
    <div
      className="emotion-0 emotion-1"
      width="25%"
    />
    <div
      className="emotion-0 emotion-1"
      width="25%"
    />
    <div
      className="emotion-0 emotion-1"
      width="25%"
    />
  </div>
</div>
`;

exports[`12 Column Options it should render a grid with 6 columns 1`] = `
.emotion-13 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-13 *,
.emotion-13 *::after,
.emotion-13 *::before {
  box-sizing: border-box;
}

.emotion-12 {
  box-sizing: border-box;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: auto;
  margin-left: auto;
  min-width: 0;
}

.emotion-0 {
  width: 16.666666666666664%;
}

<div
  className="emotion-13"
>
  <div
    className="emotion-12"
    display="flex"
  >
    <div
      className="emotion-0 emotion-1"
      width="16.666666666666664%"
    />
    <div
      className="emotion-0 emotion-1"
      width="16.666666666666664%"
    />
    <div
      className="emotion-0 emotion-1"
      width="16.666666666666664%"
    />
    <div
      className="emotion-0 emotion-1"
      width="16.666666666666664%"
    />
    <div
      className="emotion-0 emotion-1"
      width="16.666666666666664%"
    />
    <div
      className="emotion-0 emotion-1"
      width="16.666666666666664%"
    />
  </div>
</div>
`;

exports[`12 Column Options it should render a grid with 12 columns 1`] = `
.emotion-25 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-25 *,
.emotion-25 *::after,
.emotion-25 *::before {
  box-sizing: border-box;
}

.emotion-24 {
  box-sizing: border-box;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: auto;
  margin-left: auto;
  min-width: 0;
}

.emotion-0 {
  width: 8.333333333333332%;
}

<div
  className="emotion-25"
>
  <div
    className="emotion-24"
    display="flex"
  >
    <div
      className="emotion-0 emotion-1"
      width="8.333333333333332%"
    />
    <div
      className="emotion-0 emotion-1"
      width="8.333333333333332%"
    />
    <div
      className="emotion-0 emotion-1"
      width="8.333333333333332%"
    />
    <div
      className="emotion-0 emotion-1"
      width="8.333333333333332%"
    />
    <div
      className="emotion-0 emotion-1"
      width="8.333333333333332%"
    />
    <div
      className="emotion-0 emotion-1"
      width="8.333333333333332%"
    />
    <div
      className="emotion-0 emotion-1"
      width="8.333333333333332%"
    />
    <div
      className="emotion-0 emotion-1"
      width="8.333333333333332%"
    />
    <div
      className="emotion-0 emotion-1"
      width="8.333333333333332%"
    />
    <div
      className="emotion-0 emotion-1"
      width="8.333333333333332%"
    />
    <div
      className="emotion-0 emotion-1"
      width="8.333333333333332%"
    />
    <div
      className="emotion-0 emotion-1"
      width="8.333333333333332%"
    />
  </div>
</div>
`;

exports[`Column Offset Prop it should render two columns, one with a offset 1`] = `
.emotion-5 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-5 *,
.emotion-5 *::after,
.emotion-5 *::before {
  box-sizing: border-box;
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: auto;
  margin-left: auto;
  min-width: 0;
}

.emotion-0 {
  width: 16.666666666666664%;
  margin-left: 66.66666666666666%;
}

.emotion-2 {
  width: 50%;
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
    display="flex"
  >
    <div
      className="emotion-0 emotion-1"
      width="16.666666666666664%"
    />
    <div
      className="emotion-2 emotion-1"
      width="50%"
    />
  </div>
</div>
`;

exports[`Column Offset Prop it should render two columns, one with a responsive offset 1`] = `
.emotion-5 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-5 *,
.emotion-5 *::after,
.emotion-5 *::before {
  box-sizing: border-box;
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: auto;
  margin-left: auto;
  min-width: 0;
}

.emotion-2 {
  width: 50%;
}

.emotion-0 {
  width: 16.666666666666664%;
  margin-left: 66.66666666666666%;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    width: 33.33333333333333%;
    margin-left: 50%;
  }
}

@media screen and (min-width:64rem) {
  .emotion-0 {
    width: 16.666666666666664%;
    margin-left: 66.66666666666666%;
  }
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
    display="flex"
  >
    <div
      className="emotion-0 emotion-1"
      width={
        Array [
          "16.666666666666664%",
          "33.33333333333333%",
          "16.666666666666664%",
        ]
      }
    />
    <div
      className="emotion-2 emotion-1"
      width="50%"
    />
  </div>
</div>
`;

exports[`Column Span Prop it should render two columns with different responsive column spans 1`] = `
.emotion-5 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-5 *,
.emotion-5 *::after,
.emotion-5 *::before {
  box-sizing: border-box;
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: auto;
  margin-left: auto;
  min-width: 0;
}

.emotion-0 {
  width: 66.66666666666666%;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    width: 33.33333333333333%;
  }
}

@media screen and (min-width:64rem) {
  .emotion-0 {
    width: 16.666666666666664%;
  }
}

.emotion-2 {
  width: 33.33333333333333%;
}

@media screen and (min-width:25rem) {
  .emotion-2 {
    width: 66.66666666666666%;
  }
}

@media screen and (min-width:64rem) {
  .emotion-2 {
    width: 83.33333333333334%;
  }
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
    display="flex"
  >
    <div
      className="emotion-0 emotion-1"
      width={
        Array [
          "66.66666666666666%",
          "33.33333333333333%",
          "16.666666666666664%",
        ]
      }
    />
    <div
      className="emotion-2 emotion-1"
      width={
        Array [
          "33.33333333333333%",
          "66.66666666666666%",
          "83.33333333333334%",
        ]
      }
    />
  </div>
</div>
`;

exports[`Column Span Prop it should render two columns, one spaning 8 columns, the other spanning 4 columns 1`] = `
.emotion-5 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-5 *,
.emotion-5 *::after,
.emotion-5 *::before {
  box-sizing: border-box;
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: auto;
  margin-left: auto;
  min-width: 0;
}

.emotion-0 {
  width: 66.66666666666666%;
}

.emotion-2 {
  width: 33.33333333333333%;
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
    display="flex"
  >
    <div
      className="emotion-0 emotion-1"
      width="66.66666666666666%"
    />
    <div
      className="emotion-2 emotion-1"
      width="33.33333333333333%"
    />
  </div>
</div>
`;

exports[`Column render it should render 1`] = `
.emotion-2 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-2 *,
.emotion-2 *::after,
.emotion-2 *::before {
  box-sizing: border-box;
}

.emotion-0 {
  width: 8.333333333333332%;
}

<div
  className="emotion-2"
>
  <div
    className="emotion-0 emotion-1"
    width="8.333333333333332%"
  >
    child
  </div>
</div>
`;

exports[`Column render it should render as any HTML element 1`] = `
.emotion-2 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-2 *,
.emotion-2 *::after,
.emotion-2 *::before {
  box-sizing: border-box;
}

.emotion-0 {
  width: 8.333333333333332%;
}

<div
  className="emotion-2"
>
  <article
    className="emotion-0 emotion-1"
    width="8.333333333333332%"
  >
    child
  </article>
</div>
`;

exports[`Grid Gutter Prop it should render two columns with gutters 1`] = `
.emotion-5 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-5 *,
.emotion-5 *::after,
.emotion-5 *::before {
  box-sizing: border-box;
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: -0.25rem;
  margin-left: -0.25rem;
  min-width: 0;
}

.emotion-0 {
  width: 50%;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
    display="flex"
  >
    <div
      className="emotion-0 emotion-1"
      width="50%"
    />
    <div
      className="emotion-0 emotion-1"
      width="50%"
    />
  </div>
</div>
`;

exports[`Grid Gutter Prop it should render two columns with responsive gutters 1`] = `
.emotion-5 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-5 *,
.emotion-5 *::after,
.emotion-5 *::before {
  box-sizing: border-box;
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: -0.125rem;
  margin-left: -0.125rem;
  min-width: 0;
}

@media screen and (min-width:25rem) {
  .emotion-4 {
    margin-right: -0.25rem;
    margin-left: -0.25rem;
  }
}

@media screen and (min-width:64rem) {
  .emotion-4 {
    margin-right: -0.5rem;
    margin-left: -0.5rem;
  }
}

.emotion-0 {
  width: 50%;
  padding-left: 0.125rem;
  padding-right: 0.125rem;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    padding-left: 0.25rem;
    padding-right: 0.25rem;
  }
}

@media screen and (min-width:64rem) {
  .emotion-0 {
    padding-left: 0.5rem;
    padding-right: 0.5rem;
  }
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
    display="flex"
  >
    <div
      className="emotion-0 emotion-1"
      width="50%"
    />
    <div
      className="emotion-0 emotion-1"
      width="50%"
    />
  </div>
</div>
`;

exports[`Grid Vertical Prop it should render two columns stacked only on mobile and tablet 1`] = `
.emotion-5 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-5 *,
.emotion-5 *::after,
.emotion-5 *::before {
  box-sizing: border-box;
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: auto;
  margin-left: auto;
  min-width: 0;
}

@media screen and (min-width:25rem) {
  .emotion-4 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media screen and (min-width:64rem) {
  .emotion-4 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

.emotion-0 {
  width: 50%;
  min-width: 100%;
  margin-left: 0;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    min-width: 100%;
  }
}

@media screen and (min-width:64rem) {
  .emotion-0 {
    min-width: 0;
  }
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
    display="flex"
  >
    <div
      className="emotion-0 emotion-1"
      width="50%"
    />
    <div
      className="emotion-0 emotion-1"
      width="50%"
    />
  </div>
</div>
`;

exports[`Grid Vertical Prop it should render two stacked columns 1`] = `
.emotion-5 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-5 *,
.emotion-5 *::after,
.emotion-5 *::before {
  box-sizing: border-box;
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: auto;
  margin-left: auto;
  min-width: 0;
}

.emotion-0 {
  width: 50%;
  min-width: 100%;
  margin-left: 0;
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
    display="flex"
  >
    <div
      className="emotion-0 emotion-1"
      width="50%"
    />
    <div
      className="emotion-0 emotion-1"
      width="50%"
    />
  </div>
</div>
`;

exports[`Grid render it should render 1`] = `
.emotion-1 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-1 *,
.emotion-1 *::after,
.emotion-1 *::before {
  box-sizing: border-box;
}

.emotion-0 {
  box-sizing: border-box;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: auto;
  margin-left: auto;
  min-width: 0;
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
    display="flex"
  >
    child
  </div>
</div>
`;

exports[`Grid render it should render as any HTML element 1`] = `
.emotion-1 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-1 *,
.emotion-1 *::after,
.emotion-1 *::before {
  box-sizing: border-box;
}

.emotion-0 {
  box-sizing: border-box;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: auto;
  margin-left: auto;
  min-width: 0;
}

<div
  className="emotion-1"
>
  <section
    className="emotion-0"
    display="flex"
  >
    child
  </section>
</div>
`;
